--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.mysql-connector-java-5.1.39-bin.jar=C:\\Users\\senacrio\\Desktop\\mysql-connector-java-5.1.39\\mysql-connector-java-5.1.39-bin.jar
-file.reference.mysql-connector-java-5.1.39.zip=E:\\Senac\\-- Curso - Java Web\\mysql-connector-java-5.1.39.zip
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,8 +38,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.39.zip}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
